--- a/templates/id.html
+++ b/templates/id.html
@@ -7,12 +7,16 @@
     <link rel="icon" type="image/png" href="../logo256.png" />
     <link rel="apple-touch-icon" href="../logo256.png" />
 
+    <link rel="canonical" href="https://andrewarrow.dev/podpapyrus/summaries/{{.Id}}.html">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://podpapyrus.com/" />
     <meta property="og:title" content="PodPapyrus is a way to read your favorite podcasts." />
     <meta property="og:description" content="PodPapyrus is a way to read your favorite podcasts." />
     <meta property="og:image" content="../images/{{.Id}}.jpg" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
           
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
