--- a/templates/id.html
+++ b/templates/id.html
@@ -14,16 +14,14 @@
     <meta property="og:url" content="https://podpapyrus.com/" />
     <meta property="og:title" content="PodPapyrus is a way to read your favorite podcasts." />
     <meta property="og:description" content="PodPapyrus is a way to read your favorite podcasts." />
-    <meta property="og:image" content="../images/{{.Id}}.jpg" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image" content="https://andrewarrow.dev/podpapyrus/images/{{.Id}}.jpg" />
           
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://podpapyrus.com/" />
     <meta property="twitter:title" content="PodPapyrus is a way to read your favorite podcasts." />
     <meta property="twitter:description" content="PodPapyrus is a way to read your favorite podcasts." />
-    <meta property="twitter:image" content="../images/{{.Id}}.jpg" />
+    <meta property="twitter:image" content="https://andrewarrow.dev/podpapyrus/images/{{.Id}}.jpg" />
     
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script type="text/javascript">
