--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,4 @@
-<a href="./summaries/{{.Id}}.html" class="block bg-gray-800 rounded-lg p-6 border border-gray-700 hover:bg-gray-700 hover:border-blue-400 transition duration-300">
+<a href="./summaries/{{.SEOURL}}.html" class="block bg-gray-800 rounded-lg p-6 border border-gray-700 hover:bg-gray-700 hover:border-blue-400 transition duration-300">
   <img src="./images/{{.Id}}.jpg" alt="{{.Title}}" class="w-full h-40 object-cover rounded-lg mb-4" />
   <h3 class="text-xl font-semibold text-gray-100 mb-3">{{.Title}}</h3>
   <p class="text-gray-300 mb-4">{{.Short}}</p>
