--- a/templates/item.html
+++ b/templates/item.html
@@ -1,4 +1,4 @@
-<a href="./{{.Id}}.html" class="block bg-gray-800 rounded-lg p-6 border border-gray-700 flex flex-col sm:flex-row gap-6 hover:bg-gray-700 hover:border-blue-400 transition duration-300">
+<a href="./{{.SEOURL}}.html" class="block bg-gray-800 rounded-lg p-6 border border-gray-700 flex flex-col sm:flex-row gap-6 hover:bg-gray-700 hover:border-blue-400 transition duration-300">
 <img src="../images/{{.Id}}.jpg" alt="{{.Title}}" class="w-full sm:w-40 h-32 sm:h-28 object-cover rounded-lg flex-shrink-0" />
 <div class="flex-1">
 <h2 class="text-2xl font-bold text-gray-100 mb-3 hover:text-blue-400 transition duration-300">
